# lighthouse

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  EDIT_BUTTON_FIX.md  FORM_NODE_UPDATE.md  INPUT_NODE_UPDATE.md  LOGGING_UPDATE_SUMMARY.md  README.md  UI_LOGGING_UPDATE.md  coverage.xml  execution_graph.json  main.py  pyproject.toml  pytest.ini  test_debug_exec.py  test_expression_preservation.py  test_expression_ui.py  test_expressions.py  test_form_validation.py  test_input_validation.py  test_logging_integration.py
.changelog/: CHANGELOG.md  v1.0.10_changelog.md  v1.0.9_changelog.md
.claude/agents/: prd-generator.md  test-writer.md
.github/workflows/: build_release.yml  ci.yml
.logs/: .gitignore
archive/: architecture-node.md  core-node.py  demo.py  execution_graph.json  execution_graph.md  llamacpp.ipynb  node-app.py  node-native.ipynb  syntax_resolver.ipynb  test_profile_chart.py
lighthouse/: config.py  container.py
lighthouse/application/services/: execution_manager.py  execution_profiler.py  node_factory.py  workflow_file_service.py  workflow_orchestrator.py
lighthouse/domain/: exceptions.py
lighthouse/domain/models/: execution.py  field_types.py  node.py  workflow.py
lighthouse/domain/protocols/: executor_protocol.py  ui_protocol.py  (+2 more)
lighthouse/nodes/: registry.py
src/: executor.py  expression_engine.py  lighthouse.py  logging_service.py  node_base.py  nodes.py
tests/: conftest.py
tests/integration/: test_expression_edge_cases.py  test_parallel_execution.py  test_workflow_execution.py  test_workflow_save_load.py
(+40 files in other folders)
