[project]
name = "lighthouse"
version = "2.0.0"
description = "Visual node-based workflow editor built with DearPyGui"
requires-python = ">=3.11"
authors = [
    {name = "Ray Bello"}
]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "dearpygui==1.8.0",
    "rich==14.2.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
    "build>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=lighthouse --cov-report=term-missing --cov-report=html"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, tighten later
files = ["lighthouse"]
exclude = ["tests", "src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
exclude = ["src", ".logs", "dist", "build", "archive"]

[tool.ruff.isort]
known-first-party = ["lighthouse"]
